# AttendanceCheck-linux

./: .gitignore  README.md
Software/: CMakeLists.txt  main.cpp
Software/gui/: CameraArea.h  MainWidget.h  MainWindow.cpp
Software/utils/: CameraCaptureThread.h  CheckThread.h  FaceUtils.h  Global.h  RegisterThread.cpp
gui/: CameraArea.cpp  MainWidget.cpp  MainWindow.h
utils/: CameraCaptureThread.cpp  CheckThread.cpp  FaceUtils.cpp  RegisterThread.h
